POC-1 : page-accueil, textes, projets, et routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,11 @@
 
 <p>Le visionnage des textes</p>
 
-<app-textes></app-textes>
+<nav>
+    <a routerLink="/accueil">Accueil</a>
+    <a routerLink="/textes">Textes</a>
+    <a routerLink="/projets">Projets</a>
+</nav>
+
+<router-outlet></router-outlet>
+<!--<app-textes></app-textes>-->
