--- a/src/app/components/projet-detail/projet-detail.component.html
+++ b/src/app/components/projet-detail/projet-detail.component.html
@@ -1,18 +1,29 @@
-<h1>Liste de projets</h1>
-
-<h2>Les textes</h2>
-<div *ngFor = "let texte of textesProjet">
-    <h3>{{texte.id}} . {{ texte.titre }}</h3>
-    <p>{{ texte.description }}</p>
+<div *ngFor = "let p of projet">
+    <h1>{{p.titre}}</h1>
+    <p>{{p.description}}</p>
 </div>
 
-<h2>Les évènements</h2>
-<div *ngFor = "let event of evenementsProjet">
-    <h3>{{event.id}} . {{ event.nom }}</h3>
-    <p>{{ event.contenu }}</p>
+<div *ngIf = "textesProjet?.length > 0">
+    <h2>Les textes</h2>
+    <div *ngFor = "let texte of textesProjet">
+        <h3>{{texte.id}} . {{ texte.titre }}</h3>
+        <p>{{ texte.description }}</p>
+    </div>
 </div>
 
-<h2>Les personnages</h2>
-<div *ngFor = "let perso of personnagesProjet">
-    <h3>{{perso.id}} . {{ perso.surnom }}</h3>
+<div *ngIf = "evenementsProjet?.length > 0">
+    <h2>Les évènements</h2>
+    <div *ngFor = "let event of evenementsProjet">
+        <h3>{{event.id}} . {{ event.nom }}</h3>
+        <p>{{ event.contenu }}</p>
+    </div>
 </div>
+
+<div *ngIf = "personnagesProjet?.length > 0">
+    <h2>Les personnages</h2>
+    <div *ngFor = "let perso of personnagesProjet">
+        <h3>{{perso.id}} . {{ perso.surnom }}</h3>
+    </div>
+</div>
+
+
