--- a/src/app/components/projets/projets.component.html
+++ b/src/app/components/projets/projets.component.html
@@ -1,7 +1,9 @@
-<h1>Liste de projets</h1>
+<h1>Projets</h1>
 
 <div *ngFor = "let projet of projets">
-    <h2>{{projet.id}} . {{ projet.titre }}</h2>
-    <p>{{ projet.description }}</p>
-    <a routerLink="/projet/{{projet.id}}">Voir le projet</a>
+    <div class="carte-item card">
+        <h2>{{projet.id}} . {{ projet.titre }}</h2>
+        <p>{{ projet.description }}</p>
+        <a routerLink="/projet/{{projet.id}}">Voir le projet</a>
+    </div>
 </div>
