--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<div class="container">
 
-<h1>Commanderie</h1>
+    <header id="main-header">
+        <h1>e-critures</h1>
+    </header>
 
-<p>Le visionnage des textes</p>
+    <app-menu></app-menu>
 
-<nav>
-    <a routerLink="/accueil">Accueil</a>
-    <a routerLink="/textes">Textes</a>
-    <a routerLink="/projets">Projets</a>
-</nav>
+    <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
-<!--<app-textes></app-textes>-->
+</div>
