--- a/src/app/components/textes/textes.component.html
+++ b/src/app/components/textes/textes.component.html
@@ -1,7 +1,9 @@
-<h1>Liste de textes</h1>
+<h1>Textes</h1>
 <div *ngFor = "let texte of textes">
-    <h2>{{texte.id}}. {{ texte.titre }}</h2>
-    <p>{{ texte.contenu }}</p>
-    <p (click)="onSelect(texte)" [class.selected]="texte===selectedTexte">Lire le texte</p>
+    <div class="carte-item card">
+        <h2>{{texte.id}}. {{ texte.titre }}</h2>
+        <p>{{ texte.contenu }}</p>
+        <p (click)="onSelect(texte)" [class.selected]="texte===selectedTexte">Lire le texte</p>
+    </div>
 </div>
 
