--- a/src/app/pages/page-accueil/page-accueil.component.html
+++ b/src/app/pages/page-accueil/page-accueil.component.html
@@ -1,2 +1,11 @@
-<app-textes></app-textes>
-<app-projets></app-projets>
+
+<app-modal-component></app-modal-component>
+
+<div class="row">
+    <div class="col-md-6">
+        <app-textes></app-textes>
+    </div>
+    <div class="col-md-6">
+        <app-projets></app-projets>
+    </div>
+</div>
