POC-4 : premières bases édition de contenu + ajout d'un éditeur de texte

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <input type="text">
+        <div [froalaEditor]>Hello, Froala!</div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
