--- a/src/app/components/projet-detail/projet-detail.component.html
+++ b/src/app/components/projet-detail/projet-detail.component.html
@@ -7,7 +7,7 @@
     <h2>Les textes</h2>
     <div *ngFor = "let texte of textesProjet">
         <h3>{{texte.id}} . {{ texte.titre }}</h3>
-        <p>{{ texte.description }}</p>
+        <p>{{ texte.contenu }}</p>
     </div>
 </div>
 
