--- a/src/app/components/projet-detail/projet-detail.component.html
+++ b/src/app/components/projet-detail/projet-detail.component.html
@@ -1,3 +1,13 @@
+<div>
+    <label>Description du projet:
+        <input #projetDescription />
+    </label>
+    <!-- (click) passes input value to add() and then clears the input -->
+    <button (click)="addProjet('test mde', projetDescription.value); projetDescription.value=''">
+        add
+    </button>
+</div>
+
 <div *ngFor = "let p of projet">
     <h1>{{p.titre}}</h1>
     <p>{{p.description}}</p>
