--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,19 @@
 <div class="container">
 
-    <header id="main-header">
-        <h1>e-critures</h1>
-    </header>
+    <!--<header id="main-header">-->
+        <!--<h1>e-critures</h1>-->
+    <!--</header>-->
 
     <app-menu></app-menu>
 
+    <div class="row">
+        <div class="col-md-12">
+            <app-messages></app-messages>
+        </div>
+    </div>
+
+
     <router-outlet></router-outlet>
+
 
 </div>
