--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<ng-template #content let-c="close" let-d="dismiss">
+<ng-template #content let-c="close" let-d="dismiss" >
     <div class="modal-header">
         <h4 class="modal-title">Créer un projet</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
@@ -6,22 +6,14 @@
         </button>
     </div>
     <div class="modal-body">
-        <!--<div [froalaEditor]>Hello, Froala!</div>-->
 
-        <div>
-            <label>Description du projet:
-                <input #projetDescription />
-            </label>
-            <!-- (click) passes input value to add() and then clears the input -->
-            <button (click)="addProjet('test mde', projetDescription.value); projetDescription.value=''">
-                add
-            </button>
-        </div>
+        <app-add-projet></app-add-projet>
+
     </div>
 
-
-
     <div class="modal-footer">
+        <!-- (click) passes input value to add() and then clears the input -->
+
         <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
     </div>
 </ng-template>
@@ -29,5 +21,3 @@
 <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Créer un projet</button>
 
 <hr>
-
-<pre>{{closeResult}}</pre>
