--- a/src/app/pages/page-fiction-detail/page-fiction-detail.component.html
+++ b/src/app/pages/page-fiction-detail/page-fiction-detail.component.html
@@ -1,1 +1,6 @@
-<app-fiction-detail></app-fiction-detail>
+<div class="row">
+    <div class="col-md-12">
+        <app-fiction-detail></app-fiction-detail>
+    </div>
+</div>
+
