Amélioration design fiche detail fiction

--- a/src/app/components/fiction-detail/fiction-detail.component.html
+++ b/src/app/components/fiction-detail/fiction-detail.component.html
@@ -1,55 +1,135 @@
 <div class="row">
 
-    <div class="col-md-4">
-        <h1>{{fiction.titre}}</h1>
-        <p>{{fiction.id}} - {{fiction.uuid}}</p>
-        <p>timestamp = {{fiction.dateCreation.timestamp | date : 'yyyy-MM-dd HH:mm:ss Z' }}</p>
-        <p>{{fiction.description}}</p>
+    <div class="col-md-5 fiction-info">
+
+      <!--<article>-->
+          <!--<h1>{{fiction.titre}}</h1>-->
+          <!--<p>{{fiction.id}} - {{fiction.uuid}}</p>-->
+          <!--<p>timestamp = {{fiction.dateCreation.timestamp | date : 'yyyy-MM-dd HH:mm:ss Z' }}</p>-->
+          <!--<p>{{fiction.description}}</p>-->
+      <!--</article>-->
+
+      <ngb-tabset>
+        <ngb-tab title="textes">
+          <ng-template ngbTabContent>
+            <div class="row col-md-12">
+              <div *ngFor = "let texte of fiction.textes" class="item-card col-md-12">
+                <h2>{{texte.titre}}</h2>
+                <p>uuid : {{texte.uuid}}</p>
+                <p>description : {{texte.description}}</p>
+                <p>type : {{texte.type}}</p>
+                <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
+              </div>
+            </div>
+          </ng-template>
+        </ngb-tab>
+
+        <ngb-tab >
+          <ng-template ngbTabTitle>personnages</ng-template>
+          <ng-template ngbTabContent>
+            <div class="row col-md-12">
+              <h2 class="col-md-12 center">Personnages</h2>
+              <div *ngFor = "let personnage of fiction.personnages" class="col-md-6">
+                <article class="item-card">
+                  <h2>{{personnage.titre}}</h2>
+                  <p>{{personnage.description}}</p>
+                  <p>Né en {{personnage.annee_naissance}}, mort.e en {{personnage.annee_mort}}</p>
+                  <button type="button" (click)="removePersonnage(personnage.id);" class="btn btn-outline-dark">Supprimer</button>
+                  <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
+                </article>
+              </div>
+            </div>
+          </ng-template>
+        </ngb-tab>
+
+        <ngb-tab>
+          <ng-template ngbTabTitle>évènements</ng-template>
+          <ng-template ngbTabContent>
+            <div *ngFor = "let evenement of fiction.evenements" class="card item-card">
+              <h2>{{evenement.titre}}</h2>
+              <p>{{evenement.description}}</p>
+              <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
+            </div>
+          </ng-template>
+        </ngb-tab>
+      </ngb-tabset>
+
     </div>
 
-    <div class="col-md-8">
 
-        <h1>Personnages & évènements</h1>
+    <div class="col-md-7">
 
-        <!--<p>{{textareaContent}}</p>-->
+        <h1>{{fiction.titre}} - Personnages & évènements</h1>
+      <ngb-tabset>
+        <ngb-tab title="textes">
+          <ng-template ngbTabContent>
+            <form>
+              <div class="form-group">
+                <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
+                <br>
+                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <br>
+                <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
+                <br>
+                <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
 
-        <form>
-            <input type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
-            <br>
-            <textarea name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
-            <br>
-            <input type="number" name="annee_naissance" [(ngModel)]="annee_naissance">
-            <br>
-            <input type="number" name="annee_mort" [(ngModel)]="annee_mort">
-            <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
+                <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
                 <!--En test-->
-            <!--</div>-->
-            <br>
-            <input type="submit" value="Créer" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);">
-        </form>
+                <!--</div>-->
+                <br>
+                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un texte</button>
+              </div>
+            </form>
+          </ng-template>
+        </ngb-tab>
 
-        <div *ngFor = "let personnage of fiction.personnages">
-            <h2>{{personnage.titre}}</h2>
-            <p>{{personnage.description}}</p>
-            <p>Né en {{personnage.annee_naissance}}, mort.e en {{personnage.annee_mort}}</p>
-            <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
-        </div>
-        <hr>
-        <h1>Textes</h1>
+        <ngb-tab >
+          <ng-template ngbTabTitle>personnages</ng-template>
+          <ng-template ngbTabContent>
+            <form>
+              <div class="form-group">
+                <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
+                <br>
+                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <br>
+                <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
+                <br>
+                <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
 
-        <div *ngFor = "let texte of fiction.textes">
-            <h2>{{texte.titre}}</h2>
-            <p>uuid : {{texte.uuid}}</p>
-            <p>description : {{texte.description}}</p>
-            <p>type : {{texte.type}}</p>
-            <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
-        </div>
-        <hr>
-        <div *ngFor = "let evenement of fiction.evenements">
-            <h2>{{evenement.titre}}</h2>
-            <p>{{evenement.description}}</p>
-            <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
-        </div>
+                <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
+                <!--En test-->
+                <!--</div>-->
+                <br>
+                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un personnage</button>
+              </div>
+            </form>
+          </ng-template>
+        </ngb-tab>
+
+        <ngb-tab>
+          <ng-template ngbTabTitle>évènements</ng-template>
+          <ng-template ngbTabContent>
+            <form>
+              <div class="form-group">
+                <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
+                <br>
+                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <br>
+                <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
+                <br>
+                <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
+
+                <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
+                <!--En test-->
+                <!--</div>-->
+                <br>
+                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un évènement</button>
+              </div>
+            </form>
+          </ng-template>
+        </ngb-tab>
+      </ngb-tabset>
+
 
     </div>
 
