--- a/src/app/components/fiction-detail/fiction-detail.component.html
+++ b/src/app/components/fiction-detail/fiction-detail.component.html
@@ -14,10 +14,11 @@
           <ng-template ngbTabContent>
             <div class="row col-md-12">
               <div *ngFor = "let texte of fiction.textes" class="item-card col-md-12">
-                <h2>{{texte.titre}}</h2>
+                <h2>{{texte.id}} - {{texte.titre}}</h2>
                 <p>uuid : {{texte.uuid}}</p>
                 <p>description : {{texte.description}}</p>
                 <p>type : {{texte.type}}</p>
+                <button type="button" (click)="deleteTexte(texte);" class="btn btn-outline-dark">Supprimer</button>
                 <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
               </div>
             </div>
@@ -59,7 +60,7 @@
 
     <div class="col-md-7">
 
-        <h1>{{fiction.titre}} - Personnages & évènements</h1>
+        <h1>{{fiction.titre}} - Ajout d'élément</h1>
       <ngb-tabset>
         <ngb-tab title="textes">
           <ng-template ngbTabContent>
@@ -68,16 +69,12 @@
                 <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
                 <br>
                 <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
-                <br>
-                <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
-                <br>
-                <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
 
                 <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
                 <!--En test-->
                 <!--</div>-->
                 <br>
-                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un texte</button>
+                <button type="button" (click)="addTexte(titre, description, 1); titre.value =''" class="btn btn-primary">Créer un texte</button>
               </div>
             </form>
           </ng-template>
@@ -95,10 +92,6 @@
                 <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
                 <br>
                 <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
-
-                <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
-                <!--En test-->
-                <!--</div>-->
                 <br>
                 <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un personnage</button>
               </div>
@@ -115,15 +108,7 @@
                 <br>
                 <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
                 <br>
-                <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
-                <br>
-                <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
-
-                <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
-                <!--En test-->
-                <!--</div>-->
-                <br>
-                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un évènement</button>
+                <button type="button" (click)="addEvenement(titre, description);" class="btn btn-primary">Créer un évènement</button>
               </div>
             </form>
           </ng-template>
