--- a/src/app/components/fiction-detail/fiction-detail.component.html
+++ b/src/app/components/fiction-detail/fiction-detail.component.html
@@ -18,6 +18,7 @@
                 <p>uuid : {{texte.uuid}}</p>
                 <p>description : {{texte.description}}</p>
                 <p>type : {{texte.type}}</p>
+                <button type="button" (click)="updateTexte(texte);" class="btn btn-outline-dark">Editer</button>
                 <button type="button" (click)="deleteTexte(texte);" class="btn btn-outline-dark">Supprimer</button>
                 <!-- <a routerLink="/personnage/{{personnage.id}}">Voir le fiction</a> -->
               </div>
@@ -68,7 +69,7 @@
               <div class="form-group">
                 <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
                 <br>
-                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <textarea class="form-control" name="description" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
 
                 <!--<div [froalaEditor]='options' [(froalaModel)]='editorContent' >-->
                 <!--En test-->
@@ -81,19 +82,18 @@
         </ngb-tab>
 
         <ngb-tab >
-          <ng-template ngbTabTitle>personnages</ng-template>
           <ng-template ngbTabContent>
             <form>
               <div class="form-group">
                 <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
                 <br>
-                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <textarea class="form-control" name="description" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
                 <br>
                 <input class="form-control" type="number" name="annee_naissance" placeholder="Année de naissance" [(ngModel)]="annee_naissance" value = "0">
                 <br>
                 <input class="form-control" type="number" name="annee_mort" placeholder="Année de mort" [(ngModel)]="annee_mort">
                 <br>
-                <button type="button" (click)="addPersonnage(titre, description, annee_naissance, annee_mort);" class="btn btn-primary">Créer un personnage</button>
+                <button type="button" (click)="addPersonnage(titre, description, 1, annee_naissance, annee_mort);" class="btn btn-primary">Créer un personnage</button>
               </div>
             </form>
           </ng-template>
@@ -106,7 +106,7 @@
               <div class="form-group">
                 <input class="form-control" type="text" name="titre" placeholder="Surnom" [(ngModel)]="titre">
                 <br>
-                <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
+                <textarea class="form-control" name="description" cols="30" rows="10" placeholder="Description" [(ngModel)]="description"></textarea>
                 <br>
                 <button type="button" (click)="addEvenement(titre, description);" class="btn btn-primary">Créer un évènement</button>
               </div>
@@ -114,8 +114,7 @@
           </ng-template>
         </ngb-tab>
       </ngb-tabset>
-
-
+      
     </div>
 
 </div>
